overflow fix

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -17,5 +17,6 @@ html{
 @media only screen and (max-width:512px){
     .home{
         width: 100%;
+        overflow-x: hidden;
     }
 }
